src/test/rustdoc-ui/invalid-html-tags.stderr
error: unclosed HTML tag `p`
  --> $DIR/invalid-html-tags.rs:3:5
   |
LL | //! <p>💩<p>
   |     ^^^
   |
note: the lint level is defined here
  --> $DIR/invalid-html-tags.rs:1:9
   |
LL | #![deny(invalid_html_tags)]
   |         ^^^^^^^^^^^^^^^^^

error: unclosed HTML tag `unknown`
  --> $DIR/invalid-html-tags.rs:10:5
   |
LL | /// <unknown>
   |     ^^^^^^^^^

error: unclosed HTML tag `script`
  --> $DIR/invalid-html-tags.rs:13:5
   |
LL | /// <script>
   |     ^^^^^^^^

error: unclosed HTML tag `h2`
  --> $DIR/invalid-html-tags.rs:18:7
   |
LL | ///   <h2>
   |       ^^^^

error: unclosed HTML tag `h3`
  --> $DIR/invalid-html-tags.rs:20:9
   |
LL | ///     <h3>
   |         ^^^^

error: unopened HTML tag `hello`
  --> $DIR/invalid-html-tags.rs:23:5
   |
LL | /// </hello>
   |     ^^^^^^^^

error: unclosed HTML tag `p`
  --> $DIR/invalid-html-tags.rs:28:14
   |
LL | ///    <br/> <p>
   |              ^^^

error: unclosed HTML tag `div`
  --> $DIR/invalid-html-tags.rs:40:5
   |
LL | /// <div style="hello">
   |     ^^^^

error: unclosed HTML tag `h3`
  --> $DIR/invalid-html-tags.rs:42:7
   |
LL | ///   <h3>
   |       ^^^^

error: unclosed HTML tag `script`
  --> $DIR/invalid-html-tags.rs:44:5
   |
LL | /// <script
   |     ^^^^^^

error: aborting due to 10 previous errors

